crates/puffin-cli/tests/snapshots/pip_uninstall__invalid_pyproject_toml_requirement.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - "-r"
    - pyproject.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to read `pyproject.toml`
  Caused by: TOML parse error at line 3, column 16
  |
3 | dependencies = ["flask==1.0.x"]
  |                ^^^^^^^^^^^^^^^^
Version specifier `==1.0.x` doesn't match PEP 440 rules
flask==1.0.x
     ^^^^^^^


