crates/puffin-cli/tests/snapshots/pip_uninstall__invalid_requirements_txt_requirement.snap
---
source: crates/puffin-cli/tests/pip_uninstall.rs
info:
  program: puffin
  args:
    - pip-uninstall
    - "-r"
    - requirements.txt
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Couldn't parse requirement in requirements.txt position 0 to 12
  Caused by: Version specifier `==1.0.x` doesn't match PEP 440 rules
flask==1.0.x
     ^^^^^^^

